# atlas_proxy

./: ARCHITECTURE.md  BUILD_GUIDE.md  Cargo.toml  DEVSTATUS.md  NTEX_3_X_ABSTRACT.md  NTEX_DIOXUS_API_REFERENCE.md  design.txt
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: DynIPList.jsx  Layout.jsx  LocalIP.jsx  StaticPorts.jsx  StatusCard.jsx  VpsConfig.jsx  index.js
src/: lib.rs  main.rs  prelude.rs
src/net/: api.rs  hostapi.rs  mod.rs  serverapi.rs
