[package]
name = "atlas_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "6.0.0"
sqlx = { version = "0.9.0-alpha.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
smart-default = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
anyhow = "1"
ntex = "3"
serde_json = "1"
local-ip-address = "0.6.9"

